--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/firestore": "^18.7.3",
     "@react-navigation/drawer": "^6.6.6",
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@rnmapbox/maps": "^10.1.3",
     "@teovilla/react-native-web-maps": "^0.9.4",
+    "@types/react-native-dotenv": "^0.2.2",
     "expo": "~49.0.15",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
@@ -27,8 +28,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
-    "react-native-maps": "^1.8.4",
+    "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
